When all user orders are received, detailed information about the products in it is also displayed.